Audio Player adding

--- a/src/App.scss
+++ b/src/App.scss
@@ -4,6 +4,7 @@
 @import "assets/scss/general/footer";
 @import "assets/scss/general/terms-privacy";
 @import "assets/scss/general/page-loading";
+@import "assets/scss/general/audio-player";
 
 // About
 @import "assets/scss/about/about-hero";
