--- a/src/assets/scss/lore/_lore-content.scss
+++ b/src/assets/scss/lore/_lore-content.scss
@@ -161,7 +161,7 @@
       font-size: calc(18 / 1440 * 100vw);
       line-height: 1.3;
       text-indent: calc(48 / 1440 * 100vw);
-      font-family: $main-font;
+      font-family: $text-font;
       font-weight: 400;
       color: $white-color;
       margin-bottom: calc(10 / 1440 * 100vw);
